# devnotifier_test

./: devnotifier_test.kdev4  meson.build
.kdev4/: devnotifier_test.kdev4
linux/: devicenotifierlinux.cpp  devicenotifierlinux.h  udev_monitor_usb.c
mac/: USBPrivateDataSample.c  devicenotifiermac.cpp  devicenotifiermac.h  list_devices.c  meson.build
src/: idevicenotifier.h  main.cpp
